--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,13 +1,25 @@
 // Доп классы для страниц ====================================================================================================
 
+.sale {
+  height: 50px;
+  background: #FFB400;
+}
+
+.sale__descp {}
+
 // Общий класс главной обертки
 .page-recurring {
-  padding-bottom: 150px;}
+  padding-bottom: 150px;
+}
 
 // Общий класс для страниц
 .recurring {
-  padding-top: 27px;}
+  padding-top: 27px;
+}
+
 .recurring h1,
 .recurring h2 {
-  margin-bottom: 28px;}
+  margin-bottom: 28px;
+}
+
 //=============================================================================================================================
