Сверстал текстовый блок

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1412,6 +1412,35 @@ h4 {
 	margin-bottom: 42px;
 }
 
+//========================================================================================================================================================
+
+.about {
+	padding: 25px 0 65px 0;
+}
+
+.about__title {}
+
+.about__inner {
+	display: flex;
+	justify-content: space-between;
+}
+
+.about__column {
+	margin-right: 43px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.about__column-text {
+	margin-bottom: 20px;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
+}
+
 //</ОСНОВНОЙ БЛОК>====================================================================================================
 
 //<Адаптив>===========================================================================================================================================
