--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -24,14 +24,12 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 10px 25px;
-	// min-width: 144px;
-	// min-height: 36px;
-	font-size: 12px;
+	padding: 7px 16.5px;
+	font-size: 16px;
 	font-weight: 400;
-	color: #000;
-	background: #FFE417;
-	border-radius: 5px;
+	color: #fff;
+	background: #FFB400;
+	border-radius: 15px;
 
 	&:hover {}
 
