--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -206,7 +206,7 @@ h4 {
 //@import "popover.min";
 //@import "baguetteBox";
 // @import "fancybox.min";
-//@import "pagging";
+@import "pagging";
 // @import "map";
 // @import "slider-index";
 // @import "catalog";
@@ -242,12 +242,12 @@ h4 {
 	&__images {
 		flex-direction: column;
 		justify-content: space-between;
-		max-width: 523px;
+		max-width: 542px;
 		width: 100%;
 	}
 
 	&__img-item {
-		max-width: 523px;
+		// max-width: 542px;
 		width: 100%;
 		overflow: hidden;
 
@@ -317,7 +317,7 @@ h4 {
 /* Слайдер */
 .info-sl__slider {
 	min-width: 0;
-	max-width: 792px;
+	max-width: 915px;
 	width: 100%;
 	flex: 1 0 auto;
 }
@@ -1082,15 +1082,6 @@ h4 {
 	cursor: pointer;
 }
 
-.main-prod-card {
-	margin-bottom: 18px;
-}
-
-.main-prod-card .prod-card__body {
-	// flex: 0 1 24%;
-	flex: 0 1 23.7%;
-}
-
 .modern-baner {
 	position: relative;
 	margin-top: 30px;
@@ -1129,90 +1120,6 @@ h4 {
 	background: #edeeef;
 	font-size: 16px;
 	font-weight: 500;
-}
-
-// Пагинация
-.pagination {
-	justify-content: center;
-
-	// .pagination__nav-links
-	&__nav-links {
-		max-width: 500px;
-		width: 100%;
-		align-items: center;
-	}
-
-	// .pagination__back
-	&__back {
-		max-width: 93.5px;
-		width: 100%;
-		height: 34px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 12px;
-		border: 0.4px solid #c7c9cb;
-		margin-right: 37px;
-		position: relative;
-
-		&:before {
-			content: "";
-			position: absolute;
-			top: 36%;
-			left: 10%;
-			width: 5px;
-			height: 10px;
-			background: url("../img/icons/pagination__back.svg");
-			background-repeat: no-repeat;
-		}
-	}
-
-	// .pagination__numbers
-	&__numbers {
-		margin-right: 20px;
-		font-size: 16px;
-	}
-
-	&__block-dot {
-		margin-right: 20px;
-		justify-content: space-between;
-		width: 30px;
-	}
-
-	// .pagination__dot
-	&__dot {
-		display: block;
-		font-size: 16px;
-	}
-
-	// .pagination__next
-	&__next {
-		max-width: 93.5px;
-		width: 100%;
-		height: 34px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 12px;
-		border: 0.4px solid #c7c9cb;
-		margin-left: 13px;
-		position: relative;
-
-		&:after {
-			content: "";
-			position: absolute;
-			top: 36%;
-			right: 10%;
-			width: 5px;
-			height: 10px;
-			background: url("../img/icons/pagination__next.svg");
-			background-repeat: no-repeat;
-		}
-	}
-}
-
-.current {
-	color: #d3820f;
 }
 
 //<стр Отедельного товара>====================================================================================================================================
@@ -1602,6 +1509,70 @@ h4 {
 	overflow: hidden;
 	border-radius: 10px;
 	margin-right: 20px;
+}
+
+//========================================================================================================================================================
+
+.page__side-title-block {
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 43px;
+}
+
+.page__side-title {
+	font-size: 26px;
+	line-height: 35px;
+	margin-right: 13px;
+}
+
+.page__side-amount {
+	font-size: 14px;
+	line-height: 19.4px;
+	color: #8c8b8b;
+}
+
+//========================================================================================================================================================
+.page__main-catCard {
+	margin-bottom: 36px;
+}
+
+.page__main-catCard-column {
+	display: flex;
+	justify-content: center;
+	flex: 0 1 20%;
+	padding: 0 10px;
+}
+
+//========================================================================================================================================================
+
+.page__main-banner {
+	margin-bottom: 48px;
+}
+
+.banner {
+	height: 168px;
+	border: 1px solid #000;
+}
+
+//========================================================================================================================================================
+.main-prod-card {
+	flex-wrap: wrap;
+	margin: 0 -6.5px;
+	margin-bottom: 18px;
+}
+
+.main-prod-card__column {
+	flex: 0 1 24.8%;
+	padding: 0 6.5px;
+	margin-bottom: 20px;
+}
+
+//========================================================================================================================================================
+.cardImage {
+	flex: 0 1 24.8%;
+	height: 100%;
+	border-radius: 10px;
+	overflow: hidden;
 }
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
