--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -53,6 +53,48 @@
 
 //</BUTTONS>====================================================================================================
 
+//<SWITCH>====================================================================================================
+.switch-block {}
+
+.switch-block__label {
+	position: relative;
+	display: inline-block;
+	width: 37px;
+	height: 20px;
+	// background-color: rgba(0, 0, 0, 0.25);
+	background: #DDE5EC;
+	border-radius: 20px;
+	transition: all 0.3s;
+	cursor: pointer;
+}
+
+.switch-block__label:after {
+	content: "";
+	position: absolute;
+	width: 17px;
+	height: 17px;
+	border-radius: 18px;
+	background-color: white;
+	top: 1px;
+	left: 2px;
+	transition: all 0.3s;
+}
+
+input[type='checkbox']:checked+.switch-block__label:after {
+	transform: translateX(16px);
+}
+
+input[type='checkbox']:checked+.switch-block__label {
+	background-color: #FFB400;
+}
+
+.switch-block__input {
+	position: absolute;
+	left: -9999px;
+}
+
+//</SWITCH>====================================================================================================
+
 //<SEARCH>====================================================================================================
 .search {
 	position: relative;
@@ -387,36 +429,36 @@ input::-webkit-inner-spin-button {
 		display: inline-flex;
 		align-items: center;
 		position: relative;
-		font-size: 16px;
-		color: #ffffff;
-		letter-spacing: -0.3px;
-		line-height: calc(20 / 16);
+		font-size: 14px;
+		// line-height: 26px;
+		color: #a3a3a3;
+		// letter-spacing: -0.3px;
 
 		&:before {
 			content: "";
 			align-self: flex-start;
-			margin: 0px 14px 0px 0px;
-			flex: 0 0 20px;
+			margin: 0px 16px 0px 0px;
+			flex: 0 0 17px;
 			left: 0;
 			top: 0;
-			border-radius: 50%;
-			width: 20px;
-			height: 18px;
+			width: 17.45px;
+			height: 17.5px;
+			border-radius: 3.79px;
 			background: #fff;
-			border: 1px solid #a7a9ac;
+			border: 0.5px solid #d2d1d1;
 		}
 
 		&:after {
 			content: "";
 			transition: all 0.3s ease 0s;
 			transform: scale(0);
-			width: 10px;
-			height: 10px;
+			width: 8px;
+			height: 8px;
 			border-radius: 50%;
-			background-color: #77243a;
+			background-color: #FFB400;
 			position: absolute;
-			left: 5px;
-			top: 4px;
+			left: 4px;
+			top: 5px;
 		}
 	}
 }
