--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,7 +1,6 @@
 //====================================================================================================
 .header-top {
-	// min-height: 51px;
-	background: #313133;
+	background: #D2D1D1;
 }
 
 // .header-top ._container {
@@ -41,6 +40,10 @@
 .header-top ul li a:hover {
 	border-bottom: 2px solid #fff;
 	padding-bottom: 2px;
+}
+
+.header-top-index {
+	background: #313133;
 }
 
 //====================================================================================================
