--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -47,6 +47,14 @@
 	.header__contacts {
 		flex: 0 0 450px;
 	}
+
+	.footer__col {
+		margin-right: 13px;
+	}
+
+	.footer__col:last-child {
+		margin-right: 0;
+	}
 }
 
 @media (max-width: 1200px) {
@@ -274,6 +282,27 @@
 
 	.header__contacts {
 		flex: 0 0 380px;
+	}
+
+	.footer__row {
+		flex-wrap: wrap;
+	}
+
+	.footer__payment-methods {
+		margin-top: 20px;
+	}
+
+	.footer__social-network {
+		margin-top: 20px;
+	}
+
+	.footer__payment-methods-text {
+		text-align: left;
+	}
+
+	.footer__col {
+		flex: 0 1 25%;
+		margin-bottom: 20px;
 	}
 }
 
@@ -542,14 +571,6 @@
 		left: 43%;
 	}
 
-	.footer__col:nth-child(2) {
-		display: none;
-	}
-
-	.footer__col {
-		flex: 0 1 20%;
-	}
-
 	.popular h2 {
 		margin-bottom: 20px;
 	}
@@ -587,6 +608,53 @@
 
 	.header-bottom {
 		display: none;
+	}
+
+	.footer {
+		padding: 15px 0;
+	}
+
+	.footer__col_forms h3 {
+		margin-bottom: 20px;
+	}
+
+	.footer__forms {
+		margin-bottom: 15px;
+	}
+
+	.footer__forms input {
+		width: 200px;
+	}
+
+	.footer__forms .btn {
+		margin-left: -80px;
+		padding: 7px 15px;
+		font-size: 14px;
+	}
+
+	.footer__info-text {
+		font-size: 14px;
+		line-height: 1.2;
+		margin-top: 20px;
+	}
+
+	.footer__col h3 {
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
+
+	.footer__col ul li a {
+		display: block;
+		font-size: 14px;
+		line-height: 1.3;
+	}
+
+	.footer__col_forms {
+		order: 4;
+	}
+
+	.footer__col {
+		flex: 0 1 30%;
 	}
 }
 
@@ -868,7 +936,7 @@
 	}
 
 	.footer__col {
-		flex: 0 1 50%;
+		flex: 0 1 100%;
 	}
 
 	.select-slider-big {
@@ -878,6 +946,22 @@
 	.select-slider-big__item img {
 		max-width: 100%;
 		object-fit: cover;
+	}
+
+	.footer__payment-methods {
+		margin-bottom: 20px;
+	}
+
+	.footer__info-text {
+		margin-top: 10px;
+	}
+
+	.footer__col_forms h3 {
+		margin-bottom: 10px;
+	}
+
+	.footer__col_forms h3 br {
+		display: none;
 	}
 }
 
@@ -1050,10 +1134,6 @@
 		font-size: 36px;
 	}
 
-	.footer__col {
-		flex: 0 1 43%;
-	}
-
 	.main-block__choice {
 		flex-wrap: wrap;
 	}
@@ -1127,9 +1207,6 @@
 }
 
 @media (max-width: 340px) {
-	.footer__col {
-		flex: 0 1 30%;
-	}
 
 	.pagination__next,
 	.pagination__back {
@@ -1145,10 +1222,6 @@
 @media (max-width: 330px) {
 	.advant__item h4 {
 		width: 50%;
-	}
-
-	.footer__col {
-		flex: 0 1 30%;
 	}
 }
 
