--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -6,9 +6,12 @@
 }
 
 .sale__descp {
-  display: block;
+  display: flex;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
 }
 
 // Общий класс главной обертки
