--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -320,6 +320,7 @@ h4 {
 	max-width: 915px;
 	width: 100%;
 	flex: 1 0 auto;
+	border-radius: 10px;
 }
 
 .info-sl__slider .slick-list {
@@ -1631,7 +1632,8 @@ h4 {
 //========================================================================================================================================================
 
 .page__sidebar {
-	flex: 0 1 20.5%;
+	flex: 0 0 20.5%;
+	margin-right: 15px;
 }
 
 //========================================================================================================================================================
