--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -41,6 +41,14 @@
 	.menu__list li:nth-child(10) {
 		display: none;
 	}
+
+	.page__main-catCard {
+		flex-wrap: wrap;
+	}
+
+	.page__main-catCard-column {
+		padding-bottom: 15px;
+	}
 }
 
 @media (max-width: 1280px) {
